tests/ui/typeck/conversion/implicit_conversion_error_to_bytes4_return_value.sol
//@compile-flags: -Ztypeck
interface MyInterface {
    error MyCustomError(uint256, bool);
}

contract Test {
    function test() public returns(bytes4) {
        return (MyInterface.MyCustomError); //~ ERROR: member `MyCustomError` not found
    }
}
